--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,7 +24,7 @@
       <label class="label" for="username">Mot de passe</label>
       <div class="control has-icons-left has-icons-right">
         <input class="input" type="password" placeholder="Mot de passe" name="password" [(ngModel)]="form.password" required
-          minlength="6" #password="ngModel" [ngClass]="{ 'is-danger': f.submitted && password.errors }">
+          minlength="6" maxlength="40" #password="ngModel" [ngClass]="{ 'is-danger': f.submitted && password.errors }">
         <span class="icon is-small is-left">
           <i class="fas fa-lock"></i>
         </span>
@@ -37,6 +37,8 @@
       <p class="help is-danger" *ngIf="password.errors && f.submitted && password.errors['minlength']">Le mot de passe
         doit contenir au minimum 6
         caractères</p>
+      <p class="help is-danger" *ngIf="password.errors && f.submitted && password.errors['maxlength']">Le mot de passe
+        ne doit pas contenir plus de 40 caractères</p>
     </div>
 
     <div class="field is-grouped is-grouped-right">
